WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130742
[Mac] Always retry a failed MediaDocument as a PluginDocument
https://bugs.webkit.org/show_bug.cgi?id=130742
Summary
[Mac] Always retry a failed MediaDocument as a PluginDocument
Eric Carlson
Reported
2014-03-25 14:30:49 PDT
A file that fails to open as a MediaDocument is not retried as a PluginDocument if: - AVFoundation fails to open a file after initially reporting that was playable - the QTKit based media engine is disabled or
Attachments
Proposed patch
(1.31 KB, patch)
2014-03-25 14:40 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-03-25 14:31:45 PDT
<
rdar://problem/16424115
>
Eric Carlson
Comment 2
2014-03-25 14:40:19 PDT
Created
attachment 227799
[details]
Proposed patch
Jer Noble
Comment 3
2014-03-25 15:26:47 PDT
Comment on
attachment 227799
[details]
Proposed patch r=me
WebKit Commit Bot
Comment 4
2014-03-25 17:57:53 PDT
Comment on
attachment 227799
[details]
Proposed patch Clearing flags on attachment: 227799 Committed
r166274
: <
http://trac.webkit.org/changeset/166274
>
WebKit Commit Bot
Comment 5
2014-03-25 17:57:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug