[Mac] Always retry a failed MediaDocument as a PluginDocument https://bugs.webkit.org/show_bug.cgi?id=130742

Reviewed by Jer Noble.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaLoadingFailedFatally): If the element is in a media document,
    tell it that loading failed so it can retry as a plug-in.


Canonical link: https://commits.webkit.org/148796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166274 268f45cc-cd09-0410-ab3c-d52691b4dbfc